--- a/2048-master/index.html
+++ b/2048-master/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>2048</title>
-        <link rel="stylesheet" href="2048.css">
+        <link rel="stylesheet" href="2048-master/2048.css">
         <script src="2048.js"></script>
     </head>
 
